--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="container" id="root"></div>
   </body>
 </html>
